infra/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivebox
  labels:
    name: hivebox
